--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
 base = "frontend/"
 publish = "frontend/build"
-command = "yarn build"
+command = "BRAND_NAME=reactSummit yarn build && BRAND_NAME=JSNation yarn build && BRAND_NAME=NodeDayUK yarn build"
