--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,3 +1,10 @@
+[build]
+base = "frontend/"
+publish = "build"
+command = "BRAND_NAME=JSNationLive yarn build"
+
+# command = "BRAND_NAME=reactSummit yarn build && BRAND_NAME=JSNation yarn build && BRAND_NAME=NodeDayUK yarn build && BRAND_NAME=JSNationLive yarn build"
+
 [[redirects]]
   from = "/"
   to = "/jsnationlive"
