add react summit to build

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 base = "frontend/"
 publish = "build"
-command = "BRAND_NAME=JSNationLive yarn build && cp _redirects build/"
+command = "BRAND_NAME=JSNationLive yarn build && BRAND_NAME=reactSummit yarn build && cp _redirects build/"
 
 # command = "BRAND_NAME=reactSummit yarn build && BRAND_NAME=JSNation yarn build && BRAND_NAME=NodeDayUK yarn build && BRAND_NAME=JSNationLive yarn build && cp _redirects build/"
