--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Oleg Proskurin <oleg@gitnation.org>",
-  "license": "UNLICENSED",
   "scripts": {
     "sanity-login": "sanity login",
     "start": "sanity start",
@@ -17,19 +15,21 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^0.142.6",
-    "@sanity/color-input": "^0.142.6",
-    "@sanity/components": "^0.142.6",
-    "@sanity/core": "^0.142.6",
-    "@sanity/default-layout": "^0.142.7",
-    "@sanity/default-login": "^0.142.6",
-    "@sanity/desk-tool": "^0.142.7",
+    "@sanity/base": "^1.149.10",
+    "@sanity/color-input": "^1.149.7",
+    "@sanity/components": "^1.149.10",
+    "@sanity/core": "^1.149.12",
+    "@sanity/dashboard": "^1.149.10",
+    "@sanity/default-layout": "^1.149.10",
+    "@sanity/default-login": "^1.149.11",
+    "@sanity/desk-tool": "^1.149.10",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-datatable": "^1.0.5"
   },
   "devDependencies": {
-    "@sanity/cli": "^0.142.7"
+    "@sanity/cli": "^1.149.9"
   }
 }
