--- a/frontend/package.json
+++ b/frontend/package.json
@@ -78,5 +78,8 @@
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-glsl-loader": "^1.0.1"
+  },
+  "devDependencies": {
+    "netlify-cli": "^2.48.0"
   }
 }
