--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,11 @@ jobs:
           name: build website
           command: ls && cd frontend && BRAND_NAME=reactSummit yarn build
 
+      - persist_to_workspace:
+          root: .
+          paths:
+            - frontend/build/reactSummit
+
   JSNation:
     docker:
       - image: circleci/node:10
@@ -103,6 +108,11 @@ jobs:
       - run:
           name: build website
           command: ls && cd frontend && BRAND_NAME=JSNation yarn build
+
+      - persist_to_workspace:
+          root: .
+          paths:
+            - frontend/build/JSNation
 
   JSNationLive:
     docker:
@@ -116,6 +126,11 @@ jobs:
           name: build website
           command: ls && cd frontend && BRAND_NAME=JSNationLive yarn build
 
+      - persist_to_workspace:
+          root: .
+          paths:
+            - frontend/build/JSNationLive
+
   NodeDayUK:
     docker:
       - image: circleci/node:10
@@ -128,6 +143,11 @@ jobs:
           name: build website
           command: ls && cd frontend && BRAND_NAME=NodeDayUK yarn build
 
+      - persist_to_workspace:
+          root: .
+          paths:
+            - frontend/build/NodeDayUK
+
   deployAllBrandsToNetlify:
     docker:
       - image: circleci/node:10
@@ -138,7 +158,7 @@ jobs:
 
       - run:
           name: prepare redirects
-          command: ls && cd frontend && cp _redirects build/
+          command: ls && cd frontend && ls && ls build && cp _redirects build/
 
       - run:
           name: deploy to netlify
