--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "webpack-glsl-loader": "^1.0.1"
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "netlify-cli": "^2.48.0"
   }
 }
