--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     ]
   },
   "dependencies": {
-    "@sanity/block-content-to-html": "^1.3features.8",
+    "@sanity/block-content-to-html": "^1.3.8",
     "autoprefixer": "^8.3.0",
     "axios": "^0.19.0",
     "babel-core": "^6.18.2",
@@ -27,7 +27,6 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^5.0.0",
-    "browser-sync": "^2.10.0",
     "css-mqpacker": "^6.0.2",
     "del": "^3.0.0",
     "dotenv": "^8.2.0",
@@ -62,9 +61,7 @@
     "gulp-svgstore": "^5.0.5",
     "gulp-util": "^3.0.7",
     "htmlhint": "^0.11.0",
-    "husky": "^0.14.3",
     "jquery": "^3.1.1",
-    "lint-staged": "^7.0.4",
     "lodash": "^4.3.0",
     "lost": "^7.1.0",
     "postcss-csso": "^3.0.0",
@@ -77,13 +74,15 @@
     "swiper": "^4.4.6",
     "through2": "^2.0.1",
     "unified": "^8.4.1",
-    "vinyl-ftp": "^0.6.1",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-glsl-loader": "^1.0.1"
-  },
-  "devDependencies": {
+    "webpack-glsl-loader": "^1.0.1",
     "concurrently": "^5.2.0",
     "netlify-cli": "^2.48.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.10.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.4"
   }
 }
