--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "gulp build --production",
     "start": "gulp",
+    "dev": "gulp",
     "disabled_precommit": "lint-staged",
     "build-all-brands": "concurrently 'BRAND_NAME=JSNation yarn build' 'BRAND_NAME=JSNationLive yarn build' 'BRAND_NAME=reactSummit yarn build' 'BRAND_NAME=NodeDayUK yarn build'",
     "build-redirects": "cp _redirects build/",
@@ -27,6 +28,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^5.0.0",
+    "concurrently": "^5.2.0",
     "css-mqpacker": "^6.0.2",
     "del": "^3.0.0",
     "dotenv": "^8.2.0",
@@ -38,8 +40,6 @@
     "graphql-request": "^1.8.2",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-consolidate": "^0.2.0",
     "gulp-data": "^1.3.1",
     "gulp-filter": "^5.1.0",
     "gulp-front-matter": "^1.3.0",
@@ -53,17 +53,16 @@
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^7.0.1",
     "gulp-prettify": "^0.5.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-sprite": "^1.5.0",
     "gulp-svgmin": "^1.2.0",
-    "gulp-svgstore": "^5.0.5",
     "gulp-util": "^3.0.7",
     "htmlhint": "^0.11.0",
     "jquery": "^3.1.1",
     "lodash": "^4.3.0",
     "lost": "^7.1.0",
+    "netlify-cli": "^2.48.0",
     "postcss-csso": "^3.0.0",
     "remark-html": "^10.0.0",
     "remark-parse": "^7.0.1",
@@ -72,13 +71,9 @@
     "run-sequence": "^2.2.1",
     "svgxuse": "^1.2.6",
     "swiper": "^4.4.6",
-    "through2": "^2.0.1",
     "unified": "^8.4.1",
     "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-glsl-loader": "^1.0.1",
-    "concurrently": "^5.2.0",
-    "netlify-cli": "^2.48.0"
+    "webpack-glsl-loader": "^1.0.1"
   },
   "devDependencies": {
     "browser-sync": "^2.10.0",
