--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
       "htmlhint --config .htmlhintrc"
     ]
   },
-
+  "engines": {
+    "node": "^10.0.0"
+  },
   "dependencies": {
     "@sanity/block-content-to-html": "^1.3.8",
     "autoprefixer": "^8.3.0",
