--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,5 +82,9 @@
     "browser-sync": "^2.10.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.4"
+  },
+  "volta": {
+    "node": "10.24.1",
+    "yarn": "1.22.22"
   }
 }
